Issues and recommendation